add v2
1. add v2 project
2. update readme
