# docs/swag/v1_swagger.json
@@ -75,7 +75,45 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/api.Book"
+                                                "$ref": "#/definitions/internal_v1_api.Book"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v2/books": {
+            "get": {
+                "description": "get string by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Books"
+                ],
+                "summary": "Get a list of books in the the store",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/serializer.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/internal_v2_api.Book"
                                             }
                                         }
                                     }
@@ -88,7 +126,21 @@
         }
     },
     "definitions": {
-        "api.Book": {
+        "api.Device": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "internal_v1_api.Book": {
             "type": "object",
             "properties": {
                 "author": {
@@ -105,17 +157,20 @@
                 }
             }
         },
-        "api.Device": {
+        "internal_v2_api.Book": {
             "type": "object",
             "properties": {
-                "address": {
+                "author": {
                     "type": "string"
                 },
                 "id": {
                     "type": "integer"
                 },
-                "name": {
+                "title": {
                     "type": "string"
+                },
+                "year": {
+                    "type": "integer"
                 }
             }
         },
